jsdialog: fix buttons alignment

--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -64,3 +64,22 @@
 	background-color: #fafafa !important;
 	border-color: #ccc !important;
 }
+
+.jsdialog.ui-pushbutton img {
+	margin: 0px 5px 0px 0px;
+}
+
+.ui-button-box .jsdialog.ui-pushbutton {
+	display: initial !important;
+}
+
+/* button box */
+
+.jsdialog.ui-button-box-right {
+	display: flex;
+	float: right;
+}
+
+.jsdialog.ui-button-box-left {
+	float: left;
+}
